--- a/moviereviewsproject/movie/templates/home.html
+++ b/moviereviewsproject/movie/templates/home.html
@@ -1,16 +1,7 @@
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
-
-<br>
-<br>
-<br>
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container">
-    <!-- <h1>Welcome to Home Page</h1> -->
-    <!-- <h1>Welcome to Home Page, {{ name }}</h1> -->
-    <!-- <h2>This is the full home page</h2> -->
     <form action="">
         <div class="mb-3">
             <label for="searchMovie" class="form-label">
@@ -25,7 +16,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies %}
             <div class="card" style="width: 18rem;">
-                <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
+                <img src="{% if movie.image %} {{ movie.image.url }} {% else %} 'movie/images/default.jpg' {% endif %}" alt="{{ movie.title }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ movie.title }}</h5>
                     <p class="card-text">{{ movie.description }}</p>
@@ -37,6 +28,6 @@
         {% endfor %}
     </div>
 
-    <br />
-    <br />
 </div>
+
+{% endblock %}
