Added statistics page

--- a/moviereviewsproject/movie/templates/base.html
+++ b/moviereviewsproject/movie/templates/base.html
@@ -5,7 +5,12 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Movies</a>
+        <a class="navbar-brand" href="">
+            {% load static %}
+            <img src="{% static 'images/home.png' %}" alt="" width="30" height="24"
+                 class="d-inline-block align-text-top"/>
+            Movies
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,6 +18,9 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'news' %}">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'statistics' %}">Statistics</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
@@ -29,3 +37,10 @@
     {% block content %}
     {% endblock %}
 </div>
+
+<footer class="text-center text-lg-start bg-light text-muted mt-4">
+    <div class="container">
+        <div class="row">
+            <div class="text-center p-4">
+                <h4>&copy 2024 Copyright - Santiago Gomez Rueda</h4>
+        </div>
