--- a/moviereviewsproject/movie/templates/home.html
+++ b/moviereviewsproject/movie/templates/home.html
@@ -26,8 +26,18 @@
                 </div>
             </div>
         {% endfor %}
+        <br>
+        <br>
+        <br>
+        <h2>Join our mailing list:</h2>
+        <form action="{% url 'signup' %}">
+            <div class="mb-3">
+                <label for="email" class="form-label">Enter you email:</label>
+                <input type="email" class="form-control" name="email"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
     </div>
-
 </div>
 
 {% endblock %}
