Added fixed top Nav bar

--- a/moviereviewsproject/movie/templates/home.html
+++ b/moviereviewsproject/movie/templates/home.html
@@ -18,7 +18,8 @@
             <div class="card" style="width: 18rem;">
                 <img src="{% if movie.image %} {{ movie.image.url }} {% else %} 'movie/images/default.jpg' {% endif %}" alt="{{ movie.title }}">
                 <div class="card-body">
-                    <h5 class="card-title">{{ movie.title }}</h5>
+                    <h5 class="card-title">{{ movie.title }} ({{ movie.year }})</h5>
+                    <h6 class="card-title">{{ movie.genre }}</h6>
                     <p class="card-text">{{ movie.description }}</p>
                     {% if movie.url %}
                         <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
